--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 data/external/gtfs/stop_times.txt filter=lfs diff=lfs merge=lfs -text
+bus_risk_map.html filter=lfs diff=lfs merge=lfs -text
